--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -111,6 +111,7 @@ template(name='big_user_card')
                         strong #{start_date}
                     div Member Expiration 
                         strong #{lease_expiration}
+                    +checkin_button
                     //- +icolor name='swimming-pool' classes='ui avatar image'
                     //- +icolor name='weightlift' classes='ui avatar image'
                     //- +icolor name='jacuzzi' classes='ui avatar image'
