--- a/client/chat.jade
+++ b/client/chat.jade
@@ -79,9 +79,9 @@ template(name='view_chats')
     .ui.stackable.padded.grid.pad_left
         .row
             .four.wide.column
-                .ui.label(title='Unread') #{unread_message_count} Unread
+                .ui.basic.circular.label(title='Unread') #{unread_message_count} Unread
                 if currentUser
-                    .ui.icon.button#create_chat(title='New Chat')
+                    .ui.icon.circular.basic.button#create_chat(title='New Chat')
                         i.plus.icon
                         |New Chat
                 // .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
@@ -89,15 +89,15 @@ template(name='view_chats')
                 // +theme_tag_filter type='chat'
                 // +participant_filter type='chat'
                 +chat_list
-                .ui.small.header Viewing: 
-                    if viewing_published
-                        #view_private_chats.ui.button 
-                            i.unhide.icon
-                            |Published
-                    if viewing_private
-                        #view_published_chats.ui.button 
-                            i.lock.icon
-                            |Private
+                //- .ui.small.header Viewing: 
+                //-     if viewing_published
+                //-         #view_private_chats.ui.button 
+                //-             i.unhide.icon
+                //-             |Published
+                //-     if viewing_private
+                //-         #view_published_chats.ui.button 
+                //-             i.lock.icon
+                //-             |Private
             .twelve.wide.column
                 with selected_chat
                     +view_chat
@@ -140,7 +140,7 @@ template(name='view_chat')
                             img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
                             .content
                                 .header
-                                    a(href="/user/profile/#{_id}") #{profile.name}
+                                    a(href="/user/#{username}") #{profile.name}
                                     if subscribed
                                         i.bell.outline.icon(title='Subscribed')
                                     else
