--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -2,7 +2,7 @@ template(name='model_edit')
     with current_doc
         .ui.stackable.padded.grid
             .centered.row
-                .four.wide.column
+                .six.wide.column
                     .ui.header(title="model: #{type}")
                         |#{title}
                     +creation_info
@@ -14,12 +14,12 @@ template(name='model_edit')
                         +textarea_edit key='description' label='Description' direct=true
                         +array_edit key='tags' label='Tags' direct=true
                         +text_edit key='collection' label='Collection' direct=true
+                        +multi_doc_edit key='view_roles' label='View Roles' ref_model='role'
                     a.ui.green.big.circular.icon.button(href="/m/#{slug}")
                         i.big.checkmark.icon
                     #delete_model.ui.red.icon.circular.button
                         i.trash.icon
-                            
-                .twelve.wide.column
+                .ten.wide.column
                     //- |#{type}
                     //- each fields
                     //-     +Template.dynamic template=edit_template 
@@ -39,7 +39,7 @@ template(name='model_view')
                 .sixteen.wide.column
                     .ui.breadcrumb
                         a.section(href="/m/#{current_model.slug}" title=current_model.plural)
-                            .ui.compact.small.button
+                            .ui.compact.circular.basic.button
                                 |#{current_model.title}
                         .divider
                             i.chevron.right.icon
@@ -93,7 +93,7 @@ template(name='model_view')
                     +text_view key='icon'
                     +textarea_view key='description'
                     +array_view key='tags'
-                +cloud filter=slug
+                //- +cloud filter=slug
 
             .twelve.wide.column
                 //- .ui.header Fields
@@ -120,6 +120,8 @@ template(name='field_edit')
     +text_edit key='ref_model' label='Reference Model' direct=true               
     if is_ref  
         +single_doc_edit key='ref_model' ref_model='model' label='Reference Model' direct=true
+    else if is_user_ref  
+        +single_doc_edit key='role_filter' ref_model='role' label='Role Filter' direct=true
     div             
     +remove_button
             
