--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,9 +6,8 @@ template(name='nav')
             .icon.item
                 i.big.grey.loading.yin.yang.icon
         else
-            a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
+            a.icon.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
                 i.large.home.icon
-                |Gold Run
             each bookmarked_models
                 a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}")
                     //- i.large.icon(name=icon)
