--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -123,9 +123,9 @@ template(name='big_user_card')
 
 template(name='user_info')
     a.ui.small.circular.basic.button.item(href="/user/#{user.username}/")
-        if image_id
-            img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
-        |#{user.first_name} #{user.last_name}
+        //- if user.image_id
+        //-     img.ui.avatar.image(src="{{c.url user.image_id width=100 height=100 gravity='face' crop='fill'}}")
+        //- |#{user.first_name} #{user.last_name}
         |@#{user.username}
         +user_status user
 
@@ -156,12 +156,10 @@ template(name='user_list_toggle')
 template(name='voting')
     if points
         strong #{points}
-    .ui.icon.compact.button.upvote
-        i.thumbs.up.icon(class=upvote_class)
+    i.thumbs.up.circular.link.icon.upvote(class=upvote_class title='Upvote')
     each upvoter_ids
         +user_info
-    .ui.icon.compact.button.downvote
-        i.thumbs.down.icon(class=downvote_class)
+    i.thumbs.down.circular.link.icon.downvote(class=downvote_class title='Downvote')
     each downvoter_ids
         +user_info
 
