--- a/client/chat.jade
+++ b/client/chat.jade
@@ -23,7 +23,7 @@ template(name='chat_list_item')
             .description
                 .ui.horizontal.list
                     each participants
-                        .item(title=profile.name)
+                        .item(title=username)
                             // a(href="/user/profile/#{_id}")
                             img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
                             |#{username}
@@ -51,7 +51,7 @@ template(name='chat_message')
             img.ui.avatar.image(src="{{c.url author.image_id width=400 height=400 gravity='face' crop='fill'}}")
         .content
             a.author(href="/user/profile/#{author._id}") 
-                |#{author.profile.name}
+                |#{author.username}
                 +user_status author
             .metadata
                 span.date #{when}
@@ -61,17 +61,16 @@ template(name='chat_message')
                 else 
                     strong #{body}
             .actions
+                +voting
                 if is_author
-                    i.remove.link.icon.delete_message(title='Delete Message')
+                    i.remove.link.circular.icon.delete_message(title='Delete Message')
                 else
                     if read
-                        i.envelope.open.outline.link.icon.mark_unread(title='Mark Unread')
+                        i.envelope.open.outline.link.circular.icon.mark_unread(title='Mark Unread')
                     else
-                        i.mail.link.outline.icon.mark_read(title='Mark Read')
-                +voting
-                |Read by:
+                        i.mail.link.outline.circular.icon.mark_read(title='Mark Read')
                 each readers
-                    .ui.tiny.grey.label #{profile.name}
+                    .ui.tiny.basic.label(title="Read by #{username}") #{username}
                     // img.ui.avatar.image(src="{{c.url image_id width=50 height=50 gravity='face' crop='fill'}}")
                                                 
 
@@ -82,8 +81,7 @@ template(name='view_chats')
                 .ui.basic.circular.label(title='Unread') #{unread_message_count} Unread
                 if currentUser
                     .ui.icon.circular.basic.button#create_chat(title='New Chat')
-                        i.plus.icon
-                        |New Chat
+                        i.plus.large.icon
                 // .unread_icon(data-tooltip='Unread Messages' data-position='bottom center')
                 //     i.secured-letter.icon
                 // +theme_tag_filter type='chat'
@@ -122,25 +120,20 @@ template(name='view_chat')
                     i.align.left.icon
                     |Description
                 |!{content}
-                .ui.small.header
-                    i.users.icon
+                .ui.small.inline.header
                     |Participants
-                if currentUser
-                    if in_chat
-                        a.ui.button.leave_chat(href="#")
-                            i.sign.in.icon
-                            |Leave
-                    else
-                        a.ui.button.join_chat(href="#")
-                            i.sign.out.icon
-                            |Join
+                    if currentUser
+                        if in_chat
+                            i.sign.in.circular.link.icon.leave_chat(title='Leave')
+                        else
+                            i.sign.out.circular.link.icon.join_chat(title='Join')
                 .ui.divided.relaxed.list
                     each participants
                         .item
                             img.ui.avatar.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
                             .content
                                 .header
-                                    a(href="/user/#{username}") #{profile.name}
+                                    a(href="/user/#{username}") #{username}
                                     if subscribed
                                         i.bell.outline.icon(title='Subscribed')
                                     else
@@ -177,4 +170,4 @@ template(name='view_chat')
                         | Private
                 .ui.small.header Started by 
                     img.ui.avatar.image(src="{{c.url author.image_id width=400 height=400 gravity='face' crop='fill'}}")
-                    |#{author.profile.name} #{when}
+                    |#{author.username} #{when}
